rendered/envs/alpha/vmks/ingressroute-grafana-vpn.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    a8r.io/repository: https://github.com/Zebradil/myks-homelab
  name: grafana-vpn
spec:
  entryPoints:
    - vpn-web
    - vpn-websecure
  routes:
    - kind: Rule
      match: Host(`grafana.ts.zebradil.dev`) || Host(`grafana.junior.ts.zebradil.dev`)
      services:
        - name: vmks-grafana
          port: http
